Added the ability to get tasks working. Still need to fix edit button.

--- a/ToDoFinalApp/Base.lproj/Main.storyboard
+++ b/ToDoFinalApp/Base.lproj/Main.storyboard
@@ -54,7 +54,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Olt-fZ-HBM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="47" y="302"/>
+            <point key="canvasLocation" x="73" y="356"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="S7t-6N-6RT">
@@ -285,7 +285,7 @@
         <!--Name of Task-->
         <scene sceneID="8LS-Bh-2Va">
             <objects>
-                <tableViewController title="Name of Task" id="Irb-lf-ZfA" customClass="TaskViewController" customModule="FinalProjectDone" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Name of Task" id="Irb-lf-ZfA" customClass="TaskViewController" customModule="ToDoFinalApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="p4K-ja-QyM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -297,33 +297,7 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2F7-0u-T0e" id="t5s-j9-ucF">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="68.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="2000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5X-Ge-EzU">
-                                            <rect key="frame" x="54" y="23.5" width="42" height="21.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView userInteractionEnabled="NO" tag="3000" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pRQ-l5-pWI">
-                                            <rect key="frame" x="319" y="21.5" width="26" height="26"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="26" id="JKU-br-QP0"/>
-                                                <constraint firstAttribute="width" constant="26" id="bhK-D7-HvB"/>
-                                            </constraints>
-                                        </imageView>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="trailingMargin" secondItem="pRQ-l5-pWI" secondAttribute="trailing" constant="14" id="0c2-zz-kOs"/>
-                                        <constraint firstItem="x5X-Ge-EzU" firstAttribute="centerY" secondItem="t5s-j9-ucF" secondAttribute="centerY" id="2OS-5G-kiH"/>
-                                        <constraint firstItem="x5X-Ge-EzU" firstAttribute="leading" secondItem="t5s-j9-ucF" secondAttribute="leadingMargin" constant="38" id="9GF-bt-lTD"/>
-                                        <constraint firstItem="pRQ-l5-pWI" firstAttribute="centerY" secondItem="x5X-Ge-EzU" secondAttribute="centerY" id="bXy-oD-8I8"/>
-                                        <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="x5X-Ge-EzU" secondAttribute="trailing" id="dNY-RO-7Vj"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="x5X-Ge-EzU" secondAttribute="bottom" constant="13" id="sWh-9E-iWi"/>
-                                    </constraints>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="taskLabel" destination="x5X-Ge-EzU" id="clq-RN-dLK"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -331,9 +305,7 @@
                             <outlet property="delegate" destination="Irb-lf-ZfA" id="bQ8-jf-sAw"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Name of Task" id="17x-KR-Gv0">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="boV-1e-PhY"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Name of Task" id="17x-KR-Gv0"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0wD-JX-WUp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
