--- a/MyWidget/Base.lproj/MainInterface.storyboard
+++ b/MyWidget/Base.lproj/MainInterface.storyboard
@@ -33,6 +33,9 @@
                                                     <rect key="frame" x="29" y="-3" width="60" height="48"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Button" image="checkmark-3"/>
+                                                    <connections>
+                                                        <action selector="taskCompleted:" destination="CdG-hn-fck" eventType="touchUpInside" id="Sv9-dc-RM8"/>
+                                                    </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Zh-fC-Bbq">
                                                     <rect key="frame" x="104" y="10" width="42" height="21"/>
