--- a/ToDoFinalApp/Base.lproj/Main.storyboard
+++ b/ToDoFinalApp/Base.lproj/Main.storyboard
@@ -211,7 +211,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="Du6-0g-Sn6" customClass="GADBannerView">
+                        <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="Du6-0g-Sn6" customClass="GADBannerView">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -296,7 +296,7 @@
         <!--Name of Task-->
         <scene sceneID="8LS-Bh-2Va">
             <objects>
-                <tableViewController title="Name of Task" id="Irb-lf-ZfA" customClass="TaskViewController" customModule="ToDoFinalApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Name of Task" id="Irb-lf-ZfA" customClass="TaskListViewController" customModule="ToDoFinalApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="p4K-ja-QyM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -318,17 +318,20 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="Irb-lf-ZfA" id="cuc-ht-aQ2"/>
-                            <outlet property="delegate" destination="Irb-lf-ZfA" id="bQ8-jf-sAw"/>
+                            <outlet property="dataSource" destination="Irb-lf-ZfA" id="gMb-cr-5eb"/>
+                            <outlet property="delegate" destination="Irb-lf-ZfA" id="FHE-d1-mzi"/>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Name of Task" id="17x-KR-Gv0">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Dzb-wx-sOZ">
                             <connections>
-                                <segue destination="qNm-1D-bPH" kind="presentation" id="6CM-WT-DYa"/>
+                                <segue destination="kXu-me-KMC" kind="show" identifier="addTask" id="HtS-wC-VFh"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="kXu-me-KMC" kind="show" identifier="editTask" id="x7p-Nh-NHU"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0wD-JX-WUp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -337,13 +340,13 @@
         <!--Add Task-->
         <scene sceneID="7zh-BX-LQw">
             <objects>
-                <tableViewController id="kXu-me-KMC" customClass="NewTaskViewController" customModule="ToDoFinalApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="kXu-me-KMC" customClass="TaskDetailViewController" customModule="ToDoFinalApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="seC-Uu-1hy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <datePicker key="tableFooterView" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" id="JF5-Mm-LSA">
-                            <rect key="frame" x="0.0" y="117.5" width="375" height="144"/>
+                            <rect key="frame" x="0.0" y="161.5" width="375" height="144"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <date key="date" timeIntervalSinceReferenceDate="570208137.74235499">
                                 <!--2019-01-26 15:08:57 +0000-->
@@ -376,6 +379,30 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="kaD-eD-bg5">
+                                        <rect key="frame" x="0.0" y="99.5" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kaD-eD-bg5" id="anW-xZ-oNs">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Is Completed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ba-6A-u9x">
+                                                    <rect key="frame" x="16" y="11" width="102" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="LwU-l8-2MQ">
+                                                    <rect key="frame" x="318" y="6" width="49" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="didCompleteTask:" destination="kXu-me-KMC" eventType="valueChanged" id="WFM-pN-HVq"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -385,37 +412,33 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Add Task" id="SW0-Vy-GrD">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="arq-zN-Alm"/>
-                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="9Ss-I9-m19"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="arq-zN-Alm">
+                            <connections>
+                                <action selector="cancel:" destination="kXu-me-KMC" id="USx-U4-oJn"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="9Ss-I9-m19">
+                            <connections>
+                                <action selector="done:" destination="kXu-me-KMC" id="1lp-77-m6l"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="completionSwitch" destination="LwU-l8-2MQ" id="Cn2-sS-HFh"/>
+                        <outlet property="datePicker" destination="JF5-Mm-LSA" id="aS1-C1-dx0"/>
+                        <outlet property="taskNameField" destination="PB4-gj-TE7" id="5aV-3b-hRm"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E7O-1i-2NU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2952.8000000000002" y="355.7721139430285"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="K9o-UZ-lez">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qNm-1D-bPH" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fX6-z5-8VG">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="kXu-me-KMC" kind="relationship" relationship="rootViewController" id="6Sv-Oz-GLw"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ISU-BQ-0zL" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2013.5999999999999" y="355.7721139430285"/>
+            <point key="canvasLocation" x="1878" y="356"/>
         </scene>
     </scenes>
     <resources>
         <image name="Self" width="48" height="48"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="x7p-Nh-NHU"/>
         <segue reference="eJT-vf-Zxj"/>
         <segue reference="0IO-Fy-WQ8"/>
     </inferredMetricsTieBreakers>
